--- a/index.html
+++ b/index.html
@@ -1,264 +1,244 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>GMB Partners | Performance local no Google</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<!-- FontAwesome CDN para ícones vetoriais -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>GMB Partners | Performance local no Google</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<style>
-  /* Reset e básicos */
-  * {
-    margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth;
-  }
-
-  body {
-    font-family: 'Inter', sans-serif;
-    background: #f9f9f9;
-    color: #1a1a1a;
-    line-height: 1.6;
-  }
-
-  /* MENU FIXO NO TOPO */
-  header {
-    position: fixed;
-    top: 0; left: 0; right: 0;
-    background: #0f264b;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 14px 30px;
-    z-index: 10000;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-  }
-
-  .logo {
-    height: 42px;
-    cursor: pointer;
-  }
-
-  nav a {
-    color: #fff;
-    margin-left: 28px;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-  }
-  nav a:hover, nav a:focus {
-    color: #25D366;
-    outline: none;
-  }
-
-  /* Espaço para o header fixo */
-  body {
-    padding-top: 70px;
-  }
-
-  /* SEÇÕES */
-  section {
-    max-width: 1000px;
-    margin: 60px auto;
-    padding: 0 20px;
-    position: relative;
-    z-index: 1;
-  }
-
-  /* Marca d’água sutil e repetida */
-  section::before {
-    content: "";
-    background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg');
-    background-size: 150px;
-    background-repeat: repeat;
-    background-position: center;
-    opacity: 0.04;
-    position: absolute;
-    top: 0; left: 0; width: 100%; height: 100%;
-    z-index: 0;
-  }
-  section > * {
-    position: relative;
-    z-index: 2;
-  }
-
-  /* PARALAXE na seção pitch */
-  .pitch {
-    background: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg') center/contain no-repeat fixed;
-    background-color: #f9f9f9;
-    background-blend-mode: lighten;
-    padding: 60px 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 30px rgb(0 0 0 / 0.1);
-  }
-
-  .pitch p {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .pitch em {
-    color: #0f264b;
-    font-weight: 600;
-  }
-
-  /* Títulos */
-  h2 {
-    font-size: 2.2em;
-    margin-bottom: 24px;
-    color: #0f264b;
-    font-weight: 700;
-    text-align: center;
-  }
-
-  /* Listas com ícones SVG */
-  ul {
-    list-style: none;
-    padding-left: 0;
-    max-width: 700px;
-    margin: 0 auto 40px;
-  }
-  ul li {
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-    font-size: 1.15em;
-    color: #333;
-  }
-  ul li svg {
-    fill: #2e7d32;
-    width: 22px;
-    height: 22px;
-    margin-right: 12px;
-    flex-shrink: 0;
-  }
-
-  /* BENEFÍCIOS EM GRID 3X2 */
-  .benefits {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 24px 32px;
-    margin-top: 30px;
-  }
-
-  .card {
-    background: #fff;
-    padding: 24px 20px;
-    border-radius: 14px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
-    display: flex;
-    align-items: center;
-    gap: 14px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    cursor: default;
-  }
-  .card:hover {
-    transform: translateY(-6px);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.12);
-  }
-
-  .card .icon {
-    font-size: 1.8em;
-    color: #25D366;
-    flex-shrink: 0;
-  }
-  .card p {
-    margin: 0;
-    font-size: 1.1em;
-    color: #222;
-  }
-
-  /* CTA */
-  .cta {
-    text-align: center;
-    margin-top: 70px;
-  }
-  .cta p {
-    font-size: 1.25em;
-    margin-bottom: 20px;
-    color: #0f264b;
-    font-weight: 600;
-  }
-  .btn {
-    background-color: #0f264b;
-    color: #fff;
-    padding: 16px 36px;
-    border-radius: 10px;
-    font-weight: 700;
-    font-size: 1.2em;
-    text-decoration: none;
-    display: inline-flex;
-    align-items: center;
-    gap: 10px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.18);
-  }
-  .btn:hover, .btn:focus {
-    background-color: #25D366;
-    transform: scale(1.05);
-    outline: none;
-  }
-  .btn .wa-icon {
-    font-size: 1.5em;
-  }
-
-  /* WhatsApp fixo */
-  .whatsapp-float {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #25D366;
-    color: white;
-    padding: 16px;
-    border-radius: 50%;
-    box-shadow: 0 6px 14px rgba(0,0,0,0.25);
-    text-decoration: none;
-    font-size: 26px;
-    z-index: 10001;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-  .whatsapp-float:hover {
-    background-color: #1ebe57;
-    transform: scale(1.1);
-  }
-
-  /* FOOTER */
-  footer {
-    text-align: center;
-    padding: 32px 20px;
-    background-color: #eaeff4;
-    font-size: 0.95em;
-    color: #555;
-    margin-top: 60px;
-  }
-
-  /* RESPONSIVO */
-  @media (max-width: 800px) {
-    .benefits {
-      grid-template-columns: repeat(2, 1fr);
+  <style>
+    * {
+      margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth;
     }
-    nav a {
-      margin-left: 18px;
-      font-size: 0.95rem;
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f9f9f9;
+      color: #1a1a1a;
+      line-height: 1.6;
+      padding-top: 70px;
     }
-  }
-  @media (max-width: 480px) {
-    .benefits {
-      grid-template-columns: 1fr;
-    }
+
     header {
-      padding: 12px 15px;
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      background: #0f264b;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 14px 30px;
+      z-index: 10000;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
     }
+
+    .logo {
+      height: 42px;
+      cursor: pointer;
+    }
+
     nav a {
-      margin-left: 12px;
-      font-size: 0.9rem;
+      color: #fff;
+      margin-left: 28px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.3s ease;
     }
-  }
-</style>
+
+    nav a:hover, nav a:focus {
+      color: #25D366;
+      outline: none;
+    }
+
+    section {
+      max-width: 1000px;
+      margin: 60px auto;
+      padding: 0 20px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .pitch {
+      background-color: #f9f9f9;
+      padding: 60px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 30px rgb(0 0 0 / 0.1);
+    }
+
+    .pitch p {
+      font-size: 1.2em;
+      margin-bottom: 20px;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .pitch em {
+      color: #0f264b;
+      font-weight: 600;
+    }
+
+    h2 {
+      font-size: 2.2em;
+      margin-bottom: 24px;
+      color: #0f264b;
+      font-weight: 700;
+      text-align: center;
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+      max-width: 700px;
+      margin: 0 auto 40px;
+    }
+
+    ul li {
+      margin-bottom: 15px;
+      display: flex;
+      align-items: center;
+      font-size: 1.15em;
+      color: #333;
+    }
+
+    ul li svg {
+      fill: #2e7d32;
+      width: 22px;
+      height: 22px;
+      margin-right: 12px;
+      flex-shrink: 0;
+    }
+
+    .benefits {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 24px 32px;
+      margin-top: 30px;
+    }
+
+    .card {
+      background: #fff;
+      padding: 24px 20px;
+      border-radius: 14px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+      display: flex;
+      align-items: center;
+      gap: 14px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: default;
+    }
+
+    .card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
+    }
+
+    .card .icon {
+      font-size: 1.8em;
+      color: #25D366;
+      flex-shrink: 0;
+    }
+
+    .card p {
+      margin: 0;
+      font-size: 1.1em;
+      color: #222;
+    }
+
+    .cta {
+      text-align: center;
+      margin-top: 70px;
+    }
+
+    .cta p {
+      font-size: 1.25em;
+      margin-bottom: 20px;
+      color: #0f264b;
+      font-weight: 600;
+    }
+
+    .btn {
+      background-color: #0f264b;
+      color: #fff;
+      padding: 16px 36px;
+      border-radius: 10px;
+      font-weight: 700;
+      font-size: 1.2em;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.18);
+    }
+
+    .btn:hover, .btn:focus {
+      background-color: #25D366;
+      transform: scale(1.05);
+      outline: none;
+    }
+
+    .btn .wa-icon {
+      font-size: 1.5em;
+    }
+
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      padding: 16px;
+      border-radius: 50%;
+      box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+      text-decoration: none;
+      font-size: 26px;
+      z-index: 10001;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .whatsapp-float:hover {
+      background-color: #1ebe57;
+      transform: scale(1.1);
+    }
+
+    footer {
+      text-align: center;
+      padding: 32px 20px;
+      background-color: #eaeff4;
+      font-size: 0.95em;
+      color: #555;
+      margin-top: 60px;
+    }
+
+    @media (max-width: 800px) {
+      .benefits {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      nav a {
+        margin-left: 18px;
+        font-size: 0.95rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .benefits {
+        grid-template-columns: 1fr;
+      }
+
+      header {
+        padding: 12px 15px;
+      }
+
+      nav a {
+        margin-left: 12px;
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 </head>
 <body>
 
@@ -283,15 +263,15 @@
   <p><strong>Solução:</strong></p>
   <ul>
     <li>
-      <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512"><path d="M504.5 75.5l-75-75c-10-10-27-10-37 0L167 225.9c-11 11-14 28-6 41 32 58 109 134 184 184 12 8 30 5 41-6L511 137c10-10 10-27 0-37zM184 307l-47-47 26-26 47 47-26 26z"/></svg>
+      <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512"><path d="..."/></svg>
       Otimização do perfil Google Meu Negócio (Google Business Profile).
     </li>
     <li>
-      <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512"><path d="M504.5 75.5l-75-75c-10-10-27-10-37 0L167 225.9c-11 11-14 28-6 41 32 58 109 134 184 184 12 8 30 5 41-6L511 137c10-10 10-27 0-37zM184 307l-47-47 26-26 47 47-26 26z"/></svg>
+      <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512"><path d="..."/></svg>
       Captação e gestão de avaliações reais dos seus clientes.
     </li>
     <li>
-      <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512"><path d="M504.5 75.5l-75-75c-10-10-27-10-37 0L167 225.9c-11 11-14 28-6 41 32 58 109 134 184 184 12 8 30 5 41-6L511 137c10-10 10-27 0-37zM184 307l-47-47 26-26 47 47-26 26z"/></svg>
+      <svg aria-hidden="true" focusable="false" viewBox="0 0 512 512"><path d="..."/></svg>
       Relatórios mensais para acompanhar o desempenho.
     </li>
   </ul>
@@ -322,7 +302,7 @@
     </div>
     <div class="card">
       <i class="fa-solid fa-rocket-launch icon" aria-hidden="true"></i>
-      <p>Suporte especializado e acompanhamento contínuo.</p>
+      <p>🚀 Suporte especializado e acompanhamento contínuo.</p>
     </div>
   </div>
 </section>
@@ -334,7 +314,6 @@
   </a>
 </section>
 
-<!-- WhatsApp flutuante fixo -->
 <a href="https://api.whatsapp.com/send?phone=5511987654321" target="_blank" rel="noopener" class="whatsapp-float" aria-label="WhatsApp">
   <i class="fa-brands fa-whatsapp"></i>
 </a>
